--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,9 +10,130 @@
 
 </head>
 <body>
-    <h1>Programação Web</h1>
-    <p>Sérgio Augusto - David Fernandes</p>
+    <h1>A Linguagem <abbr title="HyperText Markup Language">HTML</abbr></h1>
+    <section>
+        <p>
+            <b>HTML</b> (abreviação para a expressão inglesa HyperText Markup Language, 
+            que significa Linguagem de Marcação de Texto) é uma linguagem de marcação
+            utilizada na construção de páginas na Web. Documentos HTML podem ser 
+            interpretados por navegadores.
+        </p>
+    
+        <p>
+            Alguns recursos da linguagem HTML visto até este momento:
+        </p>
 
+    </section>
 
+    <table id="recursos-html-table">
+        <thead>
+            <tr >
+                <th>Recurso</th>
+                <th>Tags associadas</th>
+                <th>Descrição</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            <tr class="even">
+                <td>
+                    Links
+                </td>
+                <td>
+                    <code>&lt;a&gt;</code>
+                </td>
+                <td>
+                    Cria um link para outra página.
+                </td>
+            </tr>
+            <tr class="odd">
+                <td rowspan="2">
+                    Listas
+                </td>
+                <td >
+                    <code>&lt;ul&gt;</code> e <code>&lt;li&gt;</code>
+                </td>
+                <td>
+                    Cria uma lista de itens ordenados.
+                </td>
+            </tr>
+            <tr >
+                <td>
+                    <code>&lt;ol&gt;</code> e <code>&lt;li&gt;</code>
+                </td>
+                <td>
+                    Cria uma lista de itens não ordenados.
+                </td>
+            </tr>
+            <tr class="even">
+                <td>
+                    Imagens
+                </td>
+                <td>
+                    <code>&lt;img&gt;</code>
+                </td>
+                <td>
+                    Inserir uma imagem.
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <article id="recursos-html-cards">
+        <section class="card">
+            <h1 class="title">
+                Links
+            </h1>
+            <span>
+                <code>&lt;a&gt;</code>
+            </span>
+            <p>
+                Cria um link para outra página.
+            </p>
+        </section>
+        <section class="card">
+            <h1 class="title">
+                Listas ordenadas
+            </h1>
+            <span>
+                <code>&lt;ul&gt;</code> e <code>&lt;li&gt;</code>
+            </span>
+            <p>
+                Cria uma lista de itens ordenados.
+            </p>
+        </section>
+        <section class="card">
+            <h1 class="title">
+                Listas não ordenadas
+            </h1>
+            <span>
+                <code>&lt;ol&gt;</code> e <code>&lt;li&gt;</code>
+            </span>
+            <p>
+                Cria uma lista de itens não ordenados.
+            </p>
+        </section>
+        <section class="card">
+            <h1 class="title">
+                Imagens
+            </h1>
+            <span>
+                <code>&lt;img&gt;</code>
+            </span>
+            <p>
+                Inserir uma imagem.
+            </p>
+        </section>
+    </article>
+    <footer>
+        <span>Desenvolvido por &ThinSpace;<b>Sérgio Augusto</b></span>
+        <span>Email para contato: &ThinSpace;
+            <address>
+                <a href="mailto:sacbj@icomp.ufam.br">
+                    sacbj@icomp.ufam.br
+                </a>
+            </address>
+        </span>
+    </footer>
 </body>
 </html>
