feat: nova pagina formulario-contato e estilizaçao inicial

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -125,6 +125,16 @@
             </p>
         </section>
     </article>
+    <article id="page-links" class="bl-article">
+        <h2>
+            Outras Páginas
+        </h2>
+        <ul>
+            <li>
+                <a href="/HTML/formulario-contato.html">Formulário de Contato</a>
+            </li>
+        </ul>
+    </article>
     <footer>
         <span>Desenvolvido por &ThinSpace;<b>Sérgio Augusto</b></span>
         <span>Email para contato: &ThinSpace;
