core: mudando index.html pro /(root)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação Web</title>
 
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 
 </head>
 <body>
@@ -131,7 +131,7 @@
         </h2>
         <ul>
             <li>
-                <a href="/HTML/formulario-contato.html">Formulário de Contato</a>
+                <a href="/ProgWeb2022/HTML/formulario-contato.html">Formulário de Contato</a>
             </li>
         </ul>
     </article>
