refactory: criaçao de um css global

--- a/HTML/formulario-contato.html
+++ b/HTML/formulario-contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PW@Formulário de Contato</title>
 
+    <link rel="stylesheet" href="../CSS/global.styles.css">
     <link rel="stylesheet" href="../CSS/formullario-contato.styles.css">
 
 </head>
