--- a/index.html
+++ b/index.html
@@ -131,7 +131,13 @@
         </h2>
         <ul>
             <li>
-                <a href="/ProgWeb2022/HTML/formulario-contato.html">Formulário de Contato</a>
+                <a href="./HTML/formulario-contato.html">Formulário de Contato</a>
+            </li>
+            <li>
+                <a href="./HTML/borda-estilo.html">Estilo da Borda</a>
+            </li>
+            <li>
+                <a href="./HTML/flex-shrink.html">Flex Shrink</a>
             </li>
         </ul>
     </article>
